==> andykarpov/karabas-pro/firmware/src/rp2040/lib/PS2KeyAdvanced-Pico/src/PS2KeyAdvanced.cpp <==
#include "pico/stdlib.h"
#include "hardware/gpio.h"
#include "hardware/sync.h"
#include "pico/time.h"
#define LOW  0
#define HIGH 1
#define OUTPUT GPIO_OUT
#define INPUT GPIO_IN
#include "PS2KeyAdvanced.h"
#include "PS2KeyCode.h"
#include "PS2KeyTable.h"

void send_now( uint8_t command )
{
_shiftdata = command;
_now_send = command;     // copy for later to save in last sent
_bitcount = 0;          // Normal processors
_parity = 0;
_ps2mode |= _TX_MODE + _PS2_BUSY;

// Only do this if sending a command not from Handshaking
if( !( _tx_ready & _HANDSHAKE ) && ( _tx_ready & _COMMAND ) )
  {
  _bytes_expected = _response_count;  // How many bytes command will generate
  _ps2mode |= _WAIT_RESPONSE;
  }

// STOP interrupt handler 
// Setting pin output low will cause interrupt before ready
gpio_set_irq_enabled(PS2_IrqPin, GPIO_IRQ_EDGE_FALL, false); //detachInterrupt( digitalPinToInterrupt( PS2_IrqPin ) );
// set pins to outputs and high
// gpio_put( PS2_DataPin, HIGH );
// gpio_set_dir( PS2_DataPin, OUTPUT );
// gpio_put( PS2_IrqPin, HIGH );
// gpio_set_dir( PS2_IrqPin, OUTPUT );
// Essential for PS2 spec compliance
busy_wait_us_32( 10 );
// set Clock LOW
gpio_set_dir(PS2_IrqPin, OUTPUT);
gpio_put( PS2_IrqPin, LOW );
// Essential for PS2 spec compliance
// set clock low for 60us
busy_wait_us_32( 60 );
// Set data low - Start bit
gpio_set_dir(PS2_DataPin, OUTPUT);
gpio_put( PS2_DataPin, LOW );
// set clock to input_pullup data stays output while writing to keyboard
pininput( PS2_IrqPin );
// Restart interrupt handler
gpio_set_irq_enabled_with_callback(PS2_IrqPin, GPIO_IRQ_EDGE_FALL, true, gpioCallback); //attachInterrupt( PS2_IrqPin ), ps2interrupt, FALLING );
//  wait clock interrupt to send data
}

void pininput( uint8_t pin )
{
/* digitalWrite( pin, HIGH );
pinMode( pin, INPUT ); */
gpio_set_dir(pin, GPIO_IN);
gpio_pull_up(pin);
gpio_put(pin, HIGH);
}

void PS2KeyAdvanced::begin( uint8_t data_pin, uint8_t irq_pin, void(*cb)(uint, uint32_t) )
{
/* PS2 variables reset */
ps2_reset( );

PS2_DataPin = data_pin;
PS2_IrqPin = irq_pin;

// initialize the pins
gpio_init(PS2_IrqPin);
pininput( PS2_IrqPin );            /* Setup Clock pin */
gpio_init(PS2_DataPin);
pininput( PS2_DataPin );           /* Setup Data pin */

// Start interrupt handler
gpioCallback = cb;
gpio_set_irq_enabled_with_callback(PS2_IrqPin, GPIO_IRQ_EDGE_FALL, true, gpioCallback);
}
