==> Petezah/AVRKeyboardToy/Firmware/PS2KeyAdvanced.cpp <==
#include "PS2KeyAdvanced.h"
#include "PS2KeyCode.h"
#include "PS2KeyTable.h"

void send_now( uint8_t command )
{
_shiftdata = command;
_now_send = command;     // copy for later to save in last sent
_bitcount = 0;
_parity = 0;
_ps2mode |= _TX_MODE + _PS2_BUSY;

// Only do this if sending a command not from Handshaking
if( !( _tx_ready & _HANDSHAKE ) && ( _tx_ready & _COMMAND ) )
  {
  _bytes_expected = _response_count;  // How many bytes command will generate
  _ps2mode |= _WAIT_RESPONSE;
  }

// set pins to outputs and high
digitalWrite( PS2_DataPin, HIGH );
pinMode( PS2_DataPin, OUTPUT );
digitalWrite( PS2_IrqPin, HIGH );
pinMode( PS2_IrqPin, OUTPUT );
delayMicroseconds( 10 );
#if defined(ARDUINO_ARCH_SAM)
// STOP interrupt handler as Due etc. a lot faster than Uno/Mega
// Setting pin output low will cause interrupt before ready
detachInterrupt();
#endif
// set Clock LOW
digitalWrite( PS2_IrqPin, LOW );
// set clock low for 60us
delayMicroseconds( 60 );
// Set data low - Start bit
digitalWrite( PS2_DataPin, LOW );
// set clock to input_pullup
pininput( PS2_IrqPin );
#if defined(ARDUINO_ARCH_SAM)
// Restart interrupt handler as Due etc. a lot faster than Uno/Mega
attachInterrupt();
//  wait clock interrupt to send data
#endif
}

void pininput( uint8_t pin )
{
#ifdef INPUT_PULLUP
pinMode( pin, INPUT_PULLUP );
#else
digitalWrite( pin, HIGH );
pinMode( pin, INPUT );
#endif
}

void PS2KeyAdvanced::begin( uint8_t data_pin )
{
/* PS2 variables reset */
ps2_reset( );

PS2_DataPin = data_pin;
PS2_IrqPin = 3; // use D3 (PD3), which is on Int1

// initialize the pins
pininput( PS2_IrqPin );            /* Setup Clock pin */
pininput( PS2_DataPin );           /* Setup Data pin */

// Start interrupt handler
attachInterrupt();
}
